# pgn

./: .gitignore  README.md  docker-compose.yml  env.template  go.mod  lexer.go  main.go  manage.py  pgn.go  pyproject.toml  scanner.go  tailwind.config.js  tox.ini
.github/workflows/: python-app.yml
data/: Ivan Nikolic_vs_Goran Arsovic_1989.02.17.pgn  Magnus Carlsen_vs_Alberto Santos Flores_2024.01.02.pgn  kasparov_ivanov_1978.pgn  lichess_study_kasparov-best-games_by_kforkyou_2020.11.19.pgn  lichess_study_kasparov-best-games_garry-kasparov-slavoljub-marjanovic_by_kforkyou_2020.11.19.pgn  lichess_study_magnus-carlsen-games_by_LeninPerez_2021.01.17.pgn  movetext.pgn  movetext2.pgn  movetext3.pgn
frontend/past-chess/: README.md  package-lock.json  package.json
past_chess/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
past_chess/migrations/: 0001_initial.py  0002_alter_game_black_alter_game_black_moves_and_more.py  0003_alter_game_black_alter_game_black_moves_and_more.py  0004_add_hstore_extension.py  0005_alter_game_tag_pairs.py  0006_game_black_moves_comments_game_white_moves_comments.py  0007_alter_game_black_moves_comments_and_more.py
past_chess/static/past_chess/: output.css
past_chess/templates/past_chess/: base.html  index.html  upload_status.html
pgn/: cli.py  exceptions.py
pgn/ game/: __init__.py  game.py
pgn/file_processing/: __init__.py  lexer.py  parser.py
pgn/file_processing/tests/: test_lexer.py  test_parser.py
pgn/game/: __init__.py  game.py
pgn_web/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
