[tool.poetry]
name = "pgn"
version = "0.1.0"
description = "A PGN File DB server and Cli tool"
authors = ["Calvin Mwadime Makokha <mwadimemakokha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
click = "^8.1.7"
django = "^5.1.1"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"
celery = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
flower = "^2.0.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
cli = "pgn.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
